--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
       <li><a href="">Books</a>
           <ul>
           <li><a href='/bookregister'>Add book</a></li>
-          <li><a href='/viewbooks'>view</a></li>
+          <li><a href='/viewbooks'>View</a></li>
         </ul>
       </li>
 
